--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^12.18.1",
+    "lucide-react": "^0.518.0",
     "react": "^19.1.0",
     "react-calendar": "^6.0.0",
     "react-circular-progressbar": "^2.2.0",
